<resources>
    <string name="app_name">Omnis</string>
    <string name="mode">Mode</string>
    <string name="tidal_volume_vt">Tidal Volume</string>
    <string name="inspiratory_expiratory_i_e_ratio">Inspiratory:Expiratory Ratio</string>
    <string name="positive_end_expiratory_pressure_peep">Positive End Expiratory Pressure</string>
    <string name="pressure_support_ps">Pressure Support</string>
    <string name="begin_treatment">Begin Treatment</string>
    <string name="stop_treatment">Stop Treatment</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="h20">cm H<sub>2</sub>0</string>
    <string name="breaths_min">breaths/min</string>
    <string name="flow_in">Flow (In)</string>
    <string name="volume_in">Volume (In)</string>
    <string name="volume_out">Volume (Out)</string>
    <string name="pressure">Pressure</string>
    <string name="ml_kg_ibw">mL/kg IBW</string>
    <string name="view_settings">View Settings</string>
    <string name="view_monitor">View Monitor</string>
    <string name="project_omnis">PROJECT OMNIS</string>
    <string name="outer_reef">Outer Reef</string>
    <string name="flow_out">Flow (Out)</string>
    <string name="_1_0">0.0</string>
</resources>
