<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mode_label"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:labelFor="@id/mode_spinner"
        android:text="@string/mode"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/mode_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccentBackground"
        android:entries="@array/modes_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mode_label" />

    <TextView
        android:id="@+id/volume_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tidal_volume_vt"
        android:labelFor="@id/tidal_volume_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_spinner" />

    <EditText
        android:id="@+id/tidal_volume_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccentBackground"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volume_label" />

    <TextView
        android:id="@+id/inspiratory_expiratory_ratio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        android:labelFor="@id/inspiratory_expiratory_ratio_text"
        android:text="@string/inspiratory_expiratory_i_e_ratio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tidal_volume_text" />


    <EditText
        android:id="@+id/inspiratory_expiratory_ratio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentBackground"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspiratory_expiratory_ratio_label" />

    <TextView
        android:id="@+id/peep_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        android:labelFor="@id/peep_text"
        android:text="@string/positive_end_expiratory_pressure_peep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspiratory_expiratory_ratio_text" />


    <EditText
        android:id="@+id/peep_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentBackground"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peep_label" />

    <TextView
        android:id="@+id/pressure_support_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        android:labelFor="@id/peep_text"
        android:text="@string/pressure_support_ps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peep_text" />

    <EditText
        android:id="@+id/pressure_support_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccentBackground"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_support_label" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_support_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="mode_label,mode_spinner,volume_label,tidal_volume_text,inspiratory_expiratory_ratio_label,inspiratory_expiratory_ratio_text,peep_label,peep_text,pressure_support_label,pressure_support_text" />

    <TextView
        android:id="@+id/pressure_out_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        android:labelFor="@id/pressure_out_text"
        android:text="@string/pressure_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/pressure_out_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/pressure_out_text"
        android:gravity="center"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:text="1.0"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_out_label" />


    <TextView
        android:id="@+id/flow_out_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"

        android:labelFor="@id/flow_out_text"
        android:text="@string/pressure_out"
        app:layout_constraintStart_toEndOf="@+id/pressure_out_text"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/flow_out_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:labelFor="@id/flow_out_text"
        android:padding="8dp"
        android:text="1.0"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/flow_out_label"
        app:layout_constraintTop_toBottomOf="@+id/flow_out_label" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_outs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="pressure_out_label,pressure_out_text,flow_out_label,flow_out_text" />


    <Button
        android:id="@+id/toggle_treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="toggleTreatment"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/begin_treatment"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>